fix: max width of  decrement/increment buttons icon, on mobile it was overflowing its container.

--- a/product-list-with-cart-main/src/components/MainLayout/mainLayout.module.css
+++ b/product-list-with-cart-main/src/components/MainLayout/mainLayout.module.css
@@ -17,12 +17,22 @@
   right: 0;
 }
 
-@media (min-width: 1280px) {
+@media (min-width: 1070px) {
   .mainLayout {
     display: grid;
     grid-template-columns: 65% 1fr;
     gap: 2rem;
     background-color: var(--white);
+  }
+  .layout {
+    padding: 3rem;
+    padding-top: 5.5rem;
+  }
+}
+
+@media (min-width: 1280px) {
+  .mainLayout {
+    grid-template-columns: 65% 1fr;
   }
   .layout {
     padding: 6.3rem;
