--- a/product-list-with-cart-main/src/components/ProductCard/productCard.module.css
+++ b/product-list-with-cart-main/src/components/ProductCard/productCard.module.css
@@ -14,6 +14,7 @@
 }
 .cover {
   width: 100%;
+
   border-radius: 8px;
 }
 .coverSelected {
@@ -28,7 +29,7 @@
   position: absolute;
   bottom: calc(var(--height) * 0.5 * -1);
 
-  width: 45%;
+  width: 50%;
   height: var(--height);
   padding-left: var(--padding-sides);
   padding-right: var(--padding-sides);
@@ -100,8 +101,8 @@
   filter: brightness(0.3);
 }
 .buttonIconWrapper {
-  --size: 0.9rem;
-  --padding: 2px;
+  --size: 0.8rem;
+  --padding: 3px;
   --final-size: calc(var(--size) - var(--padding));
   height: var(--final-size);
   width: var(--final-size);
@@ -114,6 +115,10 @@
   padding: var(--padding);
   display: flex;
   transition: 0.2s all;
+}
+.buttonIconWrapper img {
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .descriptionLayout {
@@ -141,11 +146,7 @@
   content: "$";
 }
 
-@media (min-width: 320px) {
-  .buttonsLayout {
-    width: 50%;
-  }
-}
+/* OMG Media-query parade) I'm a genious */
 
 @media (min-width: 640px) {
   .buttonsLayout {
@@ -158,7 +159,7 @@
 
 @media (min-width: 1024px) {
   .buttonsLayout {
-    width: 50%;
+    width: 80%;
   }
 }
 
